--- a/style.css
+++ b/style.css
@@ -11,26 +11,26 @@ background-image: linear-gradient(to right top, #33a0f1, #2591d9, #1882c1, #0a73
 
 .header
 {
-	color: black;font-family: initial;font-size: 50px;letter-spacing: 10px;margin-top: 80px;
+	color: white;font-family: 'Yeon Sung';font-size: 45px;letter-spacing: 10px;margin-top: 80px;
 }
 .header img
 {
-	width: 100px;margin-left: -15px;
+	width: 80px;margin-left: -15px;
 }
 
 .login_div
 {
-	background: rgba(255,255,255,0.8);float: none;border-radius: 50px;
+	background: rgba(255,255,255,0.8);float: none;border-radius: 15px;
 }
 
 .logo
 {
-	width: 200px;margin-top: 50px;border-radius: 50px;
+	width: 80px;margin-top: 30px;border-radius: 40px;
 }
 
 #login_button
 {
-	width: 80%;border-radius: 100px;
+	width: 80%;border-radius: 15px;
 }
 
 .room_name
